Modulo_4_Kubernates/26_sesion/clases-seguridad/prueba-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod-prueba-backend
  namespace: backend
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command: ["sh", "-c", "sleep 3600"]
